# hydrolysis-qmmm-workflow

./: .break-distances-timestamp.info  .break-protons-timestamp.info  .break-timestamp.info  .break-us-comb-timestamp.info  .break-us-timestamp.info  .gitignore  .hyd-energies-timestamp.info  .hyd-timestamp.info  .hyd-us-comb-timestamp.info  .hyd-us-timestamp.info  .ignore  Makefile  __quarto.yml  _additional-analysis.qmd  _eda.qmd  _quarto.yml  _sidebar.yml  analysis.qmd  graph.qmd  index.qmd  notes.qmd  objects.txt  pyproject.toml  readme.md  references.bib  setup.sh  thesis.qmd
_inv/: python_objects.txt
assets/: _modules.sh  analyse-distances.sh  cp2k-b3lyp.template.inp  cp2k.template.inp  cp2k.template.inp.bak  equilibrate.template.mdp  hyd-lincs.template.mdp  hyd-us.template.mdp  hyd.template.mdp  hyd.template.mdp.bak  jobscript.sh  local-job.sh  qm-reference.template.mdp  render-triple.vmd  rotation-restraints.partial.mdp  triplehelix.pse  vis-break.vmd  vis-hyd.template.vmd  vis-qmeq.template.vmd  vis-sites-eq.vmd  vis-wethyd-gro.template.vmd  vis-wethyd.template.vmd  vis-wetprot.template.vmd  wetbreak-us.template.mdp  wetbreak.template.mdp  wethyd-us.template.mdp  wethyd-warmup.template.mdp  wethyd.template.mdp
assets/amber99sb-star-ildnp.ff/: atomtypes.atp  (+6 more)
data/: angles.pickle
docs/: thesis.qmd
reference/: index.qmd  parsing.qmd
scripts/: run-analysis.py  sync-example-data.sh  sync-hamilton-data.sh
src/: analysis.py  analysis_utils.py  constants.py  coords.py  mdatools.py  operations.py  steps.py  style.py  utils.py  workflows.py
tests/: test_coords.py  test_output_file_checks.py  test_parsing.py
vis/: chain-a-eq-vis.vmd  triple-eq-vis.vmd
(+40 files in other folders)
